fixes of margins and spacing after checking on real mobile device

--- a/styles/general.css
+++ b/styles/general.css
@@ -68,6 +68,9 @@ h6 {
 .main-content__pagination {
 	padding: 50px 0;
 }
+.main-content__pagination .link-btn {
+	margin: 0 10px;
+}
 .pagination__prev.link-btn,
 .pagination__next.link-btn  {
 	margin: 0 50px;
@@ -144,7 +147,7 @@ h6 {
 		left: 0;
 	}
     body {
-	font-size: 10px;
+	font-size: 12px;
 	}
 	h1 {
 		font-size: 20px;
@@ -167,7 +170,10 @@ h6 {
 }
 @media screen and (max-width: 768px) {
 	.panel__logo {
-		margin-top: 80px;
+		margin-top: 100px;
+	}
+	.panel__list-item:last-of-type {
+	    margin-bottom: 60px;
 	}
 	.main-content__head {
 		position: fixed;
@@ -185,8 +191,9 @@ h6 {
 	.btn__small {
 		display: inline-block;
 	}
-	.panel__list-item:last-of-type {
-	    margin-bottom: 60px;
+	.pagination__prev.link-btn,
+	.pagination__next.link-btn {
+    	margin: 0 5px;
 	}
 }
 @media screen and (max-width: 400px) {
@@ -195,9 +202,8 @@ h6 {
 	}
 	.panel__logo {
 		max-width: 200px;
-		margin-top: 145px;
+		margin-top: 155px;
 	}
-	.link-btn,
 	.hamburger__container {
 		margin: 0 0 0 10px
 	}
@@ -218,5 +224,8 @@ h6 {
 	.main-content__heading {
 		font-size: 18px;
 		margin: 10px 0 15px;
+	}
+	.table__body .table__row {
+		padding: 10px;
 	}
 }
